--- a/pyproject.toml
+++ b/pyproject.toml
@@ -25,10 +25,17 @@ redis = "^4.5.5"
 fastapi-limiter = "^0.1.5"
 git-filter-repo = "^2.38.0"
 cloudinary = "^1.33.0"
+pytest = "^7.3.1"
+pytest-mock = "^3.10.0"
+pytest-cov = "^4.1.0"
 
 
 [tool.poetry.group.dev.dependencies]
 sphinx = "^7.0.1"
+
+
+[tool.poetry.group.test.dependencies]
+httpx = "^0.24.1"
 
 [build-system]
 requires = ["poetry-core"]
